--- a/mod_index/templates/formIndex.html
+++ b/mod_index/templates/formIndex.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-</head>
-
-<body>
-    <h1>Rota da página inicial da nossa WEB APP</h1>
-    <h1>Uso de render_template</h1>
-    <h1>Soraia da Luz Vitoria</h1>
-</body>
-
-</html>
+<h1>Home</h1>
+<p class="important">Seja bem vindo!</p>
+{% endblock %}
