--- a/mod_cliente/templates/formListaCliente.html
+++ b/mod_cliente/templates/formListaCliente.html
@@ -1,15 +1,42 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+{% extends "base.html" %}
+{% block title %}Clientes{% endblock %}
+{% block content %}
+<form action="{{ url_for('cliente.formCliente') }}" method="POST">
+    <div class="form-group row">
+        <div class="col-12 col-md-12">
+            <label style="font-size: 30px;">Clientes</label>
+            <button class="btn btn-primary float-right" type="submit" name="formNovo"><i class="fas fa-plus"></i> Novo
+            </button>
+        </div>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Clientes</title>
-</head>
-
-<body>
-    <h1>Rota da página de Clientes da nossa WEB APP</h1>
-    <h1>Uso de render_template</h1>
-    <h1>Soraia da Luz Vitoria</h1>
-</body>
-
-</html>
+    <table class="table">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">CPF</th>
+                <th scope="col">Telefone</th>
+                <th scope="col">Compra Fiado</th>
+                <th scope="col">Dia Fiado</th>
+                <th scope="col">Senha</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">...</th>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td><i class="fas fa-edit"></i></td>
+                <td><i class="fas fa-trash"></i></td>
+            </tr>
+        </tbody>
+    </table>
+</form>
+{% endblock %}
