fix templates, stylesheets and input masks

--- a/mod_cliente/templates/formListaCliente.html
+++ b/mod_cliente/templates/formListaCliente.html
@@ -2,14 +2,11 @@
 {% block title %}Clientes{% endblock %}
 {% block content %}
 <form action="{{ url_for('cliente.formCliente') }}" method="POST">
-    <div class="form-group row">
-        <div class="col-12 col-md-12">
-            <label style="font-size: 30px;">Clientes</label>
-            <button class="btn btn-primary float-right" type="submit" name="formNovo"><i class="fas fa-plus"></i> Novo
-            </button>
-        </div>
+    <label class="form-label__title">Clientes</label>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button class="btn btn-primary" type="submit" name="formNovo"><i class="fas fa-plus"></i> Novo
+        </button>
     </div>
-
     <table class="table">
         <thead class="thead-light">
             <tr>
