--- a/mod_cliente/templates/formCliente.html
+++ b/mod_cliente/templates/formCliente.html
@@ -2,62 +2,61 @@
 {% block title %}Cliente{% endblock %}
 {% block content %}
 <form name="funcionario" id="funcionario" action="" method="POST">
-    <h2>Cadastro Cliente</h2>
-    <div class="form-group" style="border: 2px solid #e3f2fd; padding: 10px;">
-        <div class="form-group row">
+    <label class="form-label__title">Criar Cadastro de Cliente</label><br>
+    <label class="form-label__description">Preencha os campos abaixo para criar um novo cliente</label>
+    <div class="row g-1 row--border">
+        <div class="row">
             <label for="id">Código</label>
-            <div class="col-12 col-md-4">
-                <input class="form-control" type="text" name="id" id="id" value="" readonly>
+            <div class="col-4">
+                <input class="form-control" type="text" name="id" id="id" value="" disabled>
             </div>
         </div>
-        <div class="form-group row">
-            <div class="col">
-                <label for="nome">Nome</label>
-                <input class="form-control" type="text" name="nome" id="nome" value="" placeholder="Nome"
-                    maxlength="100" autofocus required>
-            </div>
-            <div class="col">
-                <label for="cpf">CPF</label>
-                <input class="form-control" type="text" name="cpf" id="cpf" value="" placeholder="CPF" maxlength="15"
+        <div class="row">
+            <div class="col-4">
+                <label for="nome" class="form-label">Nome</label>
+                <input class="form-control" type="text" name="nome" id="nome" value="" maxlength="100" autofocus
                     required>
             </div>
-            <div class="col">
-                <label for="matricula">Telefone</label>
-                <input class="form-control" type="tel" name="telefone" id="telefone" value="" placeholder="Telefone"
-                    maxlength="15" required>
+            <div class="col-4">
+                <label for="cpf" class="form-label">CPF</label>
+                <input class="form-control" type="text" name="cpf" id="cpf" value="" maxlength="14" maxlength="14"
+                    required>
+            </div>
+            <div class="col-4">
+                <label for="telefone" class="form-label">Telefone</label>
+                <input class="form-control" type="tel" name="telefone" id="telefone" value="" maxlength="14"
+                    maxlength="14" required>
             </div>
         </div>
-        <div class=" form-group row">
-            <div class="col-12 col-md-4">
-                <label for="telefone" class="form-label">Compra Fiado</label>
-                <input class="form-control" type="number" name="compra-fiado" id="compra-fiado" value=""
-                    placeholder="Compra Fiado" max="1000" required>
+        <div class="row">
+            <div class="col-4">
+                <label for="compra-fiado" class="form-label">Compra Fiado</label>
+                <input class="form-control" type="text" name="compra-fiado" id="compra-fiado" value="" required>
             </div>
-            <div class="col-12 col-md-4">
-                <label for="grupo">Dia Fiado</label>
-                <input class="form-control" type="number" name="dia-fiado" id="dia-fiado" value=""
-                    placeholder="Dia Fiado" max="1000" required>
+            <div class="col-4">
+                <label for="dia-fiado" class="form-label">Dia Fiado</label>
+                <input class="form-control" type="text" name="dia-fiado" id="dia-fiado" value="" required>
 
             </div>
         </div>
-        <div class="form-group row">
-            <div class="col-12 col-md-4">
-                <label for="senha">Senha</label>
-                <input class="form-control" type="password" name="senha" id="senha" value="Bolinhas" placeholder="Senha"
-                    required>
+        <div class="row">
+            <div class="col-4">
+                <label for="senha" class="form-label">Senha</label>
+                <input class="form-control" type="password" name="senha" id="senha" value="Bolinhas" required>
             </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-12 col-md-4">
-                <label for="resenha">Repetir Senha</label>
-                <input class="form-control" type="password" name="resenha" id="resenha" value="Bolinhas"
-                    placeholder="Senha" required>
+            <div class="col-4">
+                <label for="resenha" class="form-label">Repetir Senha</label>
+                <input class="form-control" type="password" name="resenha" id="resenha" value="Bolinhas" required>
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" type='submit' name='salvarClienteDB' id='salvarClienteDB'>
-        <i class='fas fa-save'></i> Salvar </button>
-    <button class="btn btn-secondary" onclick="history.back()" type='return' name='Voltar'>
-        <i class='fas fa-undo'></i> Voltar </button>
+    <div class="row row--buttons">
+        <div class="col-12">
+            <button class="btn btn-primary" type='submit' name='salvarClienteDB' id='salvarClienteDB'>
+                <i class='fas fa-save'></i> Salvar</button>
+            <button class="btn btn-secondary" onclick="history.back()" type='return' name='Voltar'>
+                <i class='fas fa-undo'></i> Voltar</button>
+        </div>
+    </div>
 </form>
 {% endblock %}
