--- a/mod_index/templates/formIndex.html
+++ b/mod_index/templates/formIndex.html
@@ -2,6 +2,6 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 
-<h1>Home</h1>
+<label class="form-label__title">Home</label>
 <p class="important">Seja bem vindo!</p>
 {% endblock %}
