--- a/mod_produto/templates/formProduto.html
+++ b/mod_produto/templates/formProduto.html
@@ -2,37 +2,40 @@
 {% block title %}Produto{% endblock %}
 {% block content %}
 <form name="funcionario" id="funcionario" action="" method="POST">
-    <h2>Cadastro Produto</h2>
-    <div class="form-group" style="border: 2px solid #e3f2fd; padding: 10px;">
-        <div class="form-group row">
-            <label for="id">Código</label>
+    <label class="form-label__title">Criar Cadastro de Produto</label><br>
+    <label class="form-label__description">Preencha os campos abaixo para criar um novo produto</label>
+    <div class="row g-1 row--border">
+        <div class="row">
+            <label for="id" class="form-label">Código</label>
             <div class="col-12 col-md-4">
-                <input class="form-control" type="text" name="id" id="id" value="" readonly>
+                <input class="form-control" type="text" name="id" id="id" value="" disabled>
             </div>
         </div>
-        <div class=" form-group row">
-            <div class="col-12 col-md-4">
-                <label for="telefone" class="form-label">Nome</label>
-                <input class="form-control" type="text" name="nome" id="nome" value="" placeholder="Nome Produto"
-                    maxlength="100" autofocus required>
+        <div class="row">
+            <div class="col-4">
+                <label for="nome" class="form-label">Nome</label>
+                <input class="form-control" type="text" name="nome" id="nome" value="" maxlength="100" autofocus
+                    required>
             </div>
-            <div class="col-12 col-md-4">
-                <label for="grupo">Descrição</label>
-                <input class="form-control" type="text" name="descricao" id="descricao" value="" placeholder="Descrição"
-                    maxlength="100" required>
-
+            <div class="col-4">
+                <label for="foto" class="form-label">Foto</label>
+                <input class="form-control" type="file" name="foto" id="foto" value="">
             </div>
         </div>
-        <div class=" form-group row">
-            <div class="col-12 col-md-4">
-                <label for="foto">Foto</label>
-                <input class="form-control" type="file" name="foto" id="foto" value="" placeholder="Foto">
+        <div class="row">
+            <div class="col-8">
+                <label for="descricao" class="form-label">Descrição</label>
+                <textarea class="form-control row__textarea" maxlength="100" id="descricao"></textarea>
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" type='submit' name='salvarProdutoDB' id='salvarProdutoDB'>
-        <i class='fas fa-save'></i> Salvar</button>
-    <button class="btn btn-secondary" onclick="history.back()" type='return' name='Voltar'>
-        <i class='fas fa-undo'></i> Voltar</button>
+    <div class="row row--buttons">
+        <div class="col-12">
+            <button class="btn btn-primary" type='submit' name='salvarProdutoDB' id='salvarProdutoDB'>
+                <i class='fas fa-save'></i> Salvar</button>
+            <button class="btn btn-secondary" onclick="history.back()" type='return' name='Voltar'>
+                <i class='fas fa-undo'></i> Voltar</button>
+        </div>
+    </div>
 </form>
 {% endblock %}
