--- a/templates/base.html
+++ b/templates/base.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} - Pastelaria</title>
-    {% block style %}{% endblock %}
-    <style>
-        .important {
-            color: #6495ED;
-        }
-    </style>
+    
+    {% block style %}
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.2.2-dist/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.2.0-web/css/all.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    {% endblock %}
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     {% block menu %}
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand">Pastelaria</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('index.formIndex') }}"><i class="fas fa-home"></i> HOME <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('funcionario.formListaFuncionario') }}"><i
-                            class="fas fa-cart-arrow-down"></i> FUNCIONÁRIOS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('cliente.formListaCliente') }}"><i class="fas fa-users"></i>
-                        CLIENTES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('produto.formListaProduto') }}"><i
-                            class="fas fa-pizza-slice"></i> PRODUTOS</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light text-white">
+        <div class="container-fluid">
+            <a class="navbar-brand">Pastelaria</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index.formIndex') }}"><i class="fas fa-home"></i> HOME
+                            <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('funcionario.formListaFuncionario') }}"><i
+                                class="fas fa-cart-arrow-down"></i> FUNCIONÁRIOS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('cliente.formListaCliente') }}"><i
+                                class="fas fa-users"></i>
+                            CLIENTES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('produto.formListaProduto') }}"><i
+                                class="fas fa-pizza-slice"></i> PRODUTOS</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     {% endblock %}
@@ -52,15 +55,18 @@
         {% endblock %}
 
         {% block footer %}
-        <div class="footer fixed-bottom text-center p-3" style="background-color: #e3f2fd;">
-            <a class="text-black" href="{{ url_for('index.formIndex') }}">&copy; 2022 by Soraia</a>
+        <div class="footer fixed-bottom text-center p-3">
+            <a class="text-white" href="{{ url_for('index.formIndex') }}">&copy; 2022 by Soraia</a>
         </div>
         {% endblock %}
     </div>
 
-    {% block js %}{% endblock %}
+    {% block js %}
     <script src="{{ url_for('static', filename='bootstrap-5.2.2-dist/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='fontawesome-free-6.2.0-web/js/all.js') }}"></script>
+    <script src="{{ url_for('static', filename='masks.js') }}"></script>
+    {% endblock %}
+
 </body>
 
 </html>
