--- a/mod_funcionario/templates/formFuncionario.html
+++ b/mod_funcionario/templates/formFuncionario.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Funcionário{% endblock %}
 {% block content %}
-<form name="funcionario" id="funcionario" action="" method="POST">
+<form name="funcionario" id="funcionario" action="{{ url_for('funcionario.insert') }}" method="POST">
     <label class="form-label__title">Criar Cadastro de Funcionário</label><br>
     <label class="form-label__description">Preencha os campos abaixo para criar um novo funcionário</label>
     <div class="row g-1 row--border">
@@ -34,7 +34,7 @@
             </div>
             <div class="col-4">
                 <label for="grupo" class="form-label">Grupo</label>
-                <select class="form-select" name="grupo" id="grupo" aria-label="grupo">
+                <select class="form-select" name="grupo" id="grupo" aria-label="Grupo">
                     <option value="0">Atendente</option>
                     <option value="1">Caixa</option>
                     <option value="2">Adm</option>
