--- a/mod_produto/templates/formListaProduto.html
+++ b/mod_produto/templates/formListaProduto.html
@@ -13,22 +13,26 @@
                 <th scope="col">#</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Descrição</th>
-                <th scope="col">Foto</th>
                 <th scope="col">Valor Unitário</th>
+                <th scope="col">Foto</th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
+            {% if result %}
+            {% for row in result[0] %}
             <tr>
-                <th scope="row">...</th>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
-                <td>...</td>
+                <th scope="row"> {{ row['id_funcionario'] }}</th>
+                <td> {{ row['nome'] }}</td>
+                <td> {{ row['descricao'] }}</td>
+                <td> {{ row['valor_unitario'] }}</td>
+                <td> {{ row['foto'] }}</td>
                 <td><i class="fas fa-edit"></i></td>
                 <td><i class="fas fa-trash"></i></td>
             </tr>
+            {% endfor %}
+            {% endif %}
         </tbody>
     </table>
 </form>
