--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} - Pastelaria</title>
-    
+
     {% block style %}
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.2.2-dist/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-6.2.0-web/css/all.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='sweetalert2/sweetalert2.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
     {% endblock %}
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,9 +64,48 @@
     </div>
 
     {% block js %}
+    
     <script src="{{ url_for('static', filename='bootstrap-5.2.2-dist/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='fontawesome-free-6.2.0-web/js/all.js') }}"></script>
     <script src="{{ url_for('static', filename='masks.js') }}"></script>
+    <script src="{{ url_for('static', filename='sweetalert2/sweetalert2.all.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='jquery/jquery-3.6.1.min.js') }}"></script>
+
+    {% if request.args.get('msg'): %}
+    <script>
+        Swal.fire({
+            title: 'Sucesso',
+            text: '{{ request.args.get("msg") }}', icon: 'success',
+            confirmButtonText: 'OK'
+        });
+    </script>
+    {% elif msg: %}
+    <script>
+        Swal.fire({
+            title: 'Sucesso',
+            text: '{{ msg }}',
+            icon: 'success',
+            confirmButtonText: 'OK'
+        });
+    </script>
+    {% elif request.args.get('msgErro'): %}
+    <script>
+        Swal.fire({
+            title: 'Erro',
+            text: "{{ request.args.get('msgErro') }}", icon: 'error',
+            confirmButtonText: 'OK'
+        });
+    </script>
+    {% elif msgErro: %}
+    <script>
+        Swal.fire({
+            title: 'Erro',
+            text: '{{ msgErro }}',
+            icon: 'error',
+            confirmButtonText: 'OK'
+        });
+    </script>
+    {% endif %}
     {% endblock %}
 
 </body>
