--- a/mod_funcionario/templates/formFuncionario.html
+++ b/mod_funcionario/templates/formFuncionario.html
@@ -1,40 +1,57 @@
 {% extends "base.html" %}
 {% block title %}Funcionário{% endblock %}
+{# ajusta as variáveis conforme novo ou edit #}
+{% set id = result[0].id_funcionario if result else '0' %}
+{% set nome = result[0].nome if result else '' %}
+{% set cpf = result[0].cpf if result else '' %}
+{% set matricula = result[0].matricula if result else '' %}
+{% set telefone = result[0].telefone if result else '' %}
+{% set grupo = result[0].grupo if result else '' %}
+{% set senha = result[0].senha if result else '' %}
 {% block content %}
-<form name="funcionario" id="funcionario" action="{{ url_for('funcionario.insert') }}" method="POST">
-    <label class="form-label__title">Criar Cadastro de Funcionário</label><br>
-    <label class="form-label__description">Preencha os campos abaixo para criar um novo funcionário</label>
+<form name="{{ 'formEditar' if result else 'formAdicionar' }}" 
+    id="{{ 'formEditar' if result else 'formAdicionar' }}"
+    action="{{ url_for('funcionario.edit') if result else url_for('funcionario.insert') }}" 
+    method="POST">
+    <label class="form-label__title">{{ 'Editar Cadastro de Funcionário' if result else 'Criar Cadastro de
+        Funcionário'}}</label><br>
+    <label class="form-label__description">{{ 'Preencha os campos abaixo para editar o funcionário' if result else
+        'Preencha os campos abaixo para criar um novo funcionário' }}</label>
     <div class="row g-1 row--border">
         <div class="row">
             <label for="id" class="form-label">Código</label>
             <div class="col-4">
-                <input class="form-control" type="text" name="id" id="id" value="" disabled>
+                <input class="form-control" type="text" name="id-funcionario" id="id-funcionario" value="{{ id }}" disabled>
+                <input class="form-control" type="hidden" name="id" id="id" value="{{ id }}">
             </div>
         </div>
         <div class="row">
             <div class="col-4">
                 <label for="nome" class="form-label">Nome</label>
-                <input class="form-control" type="text" name="nome" id="nome" value="" maxlength="100" autofocus
-                    required>
+                <input class="form-control" type="text" name="nome" id="nome" value="{{ nome }}" maxlength="100"
+                    autofocus required>
             </div>
             <div class="col-4">
                 <label for="cpf" class="form-label">CPF</label>
-                <input class="form-control" type="text" name="cpf" id="cpf" value="" minlength="14" maxlength="14" required>
+                <input class="form-control" type="text" name="cpf" id="cpf" value="{{ cpf }}" minlength="14"
+                    maxlength="14" required>
             </div>
             <div class="col-4">
                 <label for="matricula" class="form-label">Matrícula</label>
-                <input class="form-control" type="text" name="matricula" id="matricula" value="" maxlength="10"
-                    required>
+                <input class="form-control" type="text" name="matricula" id="matricula" value="{{ matricula }}"
+                    maxlength="10" required>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
                 <label for="telefone" class="form-label">Telefone</label>
-                <input class="form-control" type="tel" name="telefone" id="telefone" value="" minlength="14" maxlength="14" required>
+                <input class="form-control" type="tel" name="telefone" id="telefone" value="{{ telefone }}"
+                    minlength="14" maxlength="14" required>
             </div>
             <div class="col-4">
                 <label for="grupo" class="form-label">Grupo</label>
                 <select class="form-select" name="grupo" id="grupo" aria-label="Grupo">
+                    <option value="{{ grupo }}" selected>{{ grupo }}</option>
                     <option value="0">Atendente</option>
                     <option value="1">Caixa</option>
                     <option value="2">Adm</option>
@@ -44,13 +61,13 @@
         <div class="row">
             <div class="col-4">
                 <label for="senha" class="form-label">Senha</label>
-                <input class="form-control" type="password" name="senha" id="senha" value="Bolinhas" minlength="6" maxlength="20"
-                    required>
+                <input class="form-control" type="password" name="senha" id="senha" value="{{ senha }}" minlength="6"
+                    maxlength="20" required>
             </div>
             <div class="col-4">
                 <label for="resenha" class="form-label">Repetir Senha</label>
-                <input class="form-control" type="password" name="resenha" id="resenha" value="Bolinhas" minlength="6" maxlength="20"
-                    required>
+                <input class="form-control" type="password" name="resenha" id="resenha" value="{{ senha }}"
+                    minlength="6" maxlength="20" required>
             </div>
         </div>
     </div>
