--- a/static/base.css
+++ b/static/base.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #0d6efd;
+    background-color: #727c83;
 }
 
 .nav-link{
@@ -7,7 +7,7 @@ nav {
 }
 
 .important {
-    color: #6495ED;
+    color: #727c83;
 }
 
 .form-label__title {
@@ -32,5 +32,5 @@ nav {
 }
 
 .footer {
-    background-color: #0d6efd;
+    background-color: #727c83;
 }
