--- a/mod_cliente/templates/formListaCliente.html
+++ b/mod_cliente/templates/formListaCliente.html
@@ -38,10 +38,58 @@
                             <i class="fas fa-edit"></i></button>
                     </form>
                 </td>
+                <td>
+                    <form method='POST' name='jsDelete' id='jsDelete'>
+                        <input type='hidden' name='id_cliente' value="{{ row['id_cliente'] }}">
+                        <button style="background-color: #ffffff; border: none;" type="submit"
+                            name="formDeleteCliente"> <i class="fas fa-trash"></i></button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
             {% endif %}
         </tbody>
     </table>
 </form>
+{% endblock %}
+{% block jslist %}
+<script>
+    $("form[name='jsDelete']").submit(function (e) {
+        // parar o envio para poder fazer manualmente
+        e.preventDefault();
+        Swal.fire({
+            title: '', text: "Deseja realmente excluir: " + $(e.target)[0][0].value,
+            icon: 'warning', showCancelButton: true,
+            confirmButtonColor: '#3085d6', cancelButtonColor: '#d33',
+            cancelButtonText: 'Cancelar', confirmButtonText: 'Sim'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                deletarCliente($(e.target)[0][0].value); // Retorna o valor que está no id
+            }
+        })
+    })
+    // sempre pega a url da barra de endereço
+    $SCRIPT_ROOT = {{ request.script_root | tojson | safe }};
+    function deletarCliente(idCliente) {
+        $.post($SCRIPT_ROOT + "{{ url_for('cliente.delete') }}", {
+            id_cliente: idCliente
+        }, function (data) {
+            if (!data.erro) {
+                Swal.fire({
+                    title: '', text: 'ID' + data.msg.id + ', ' + data.msg.msg,
+                    icon: 'success', showCancelButton: false,
+                    confirmButtonColor: '#3085d6', cancelButtonColor: '#d33', confirmButtonText: 'OK'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        window.location.replace($SCRIPT_ROOT + "{{ url_for('cliente.formListaCliente') }}");
+                    }
+                })
+            }
+            else {
+                Swal.fire(data.msgErro.msg, data.msgErro.erro, "error");
+            }
+        }
+        )
+    }
+</script>
 {% endblock %}
