--- a/mod_produto/templates/formListaProduto.html
+++ b/mod_produto/templates/formListaProduto.html
@@ -30,8 +30,8 @@
                     <form action="{{ url_for('produto.formEditProduto') }}" method="POST"
                         name="formEdit{{ row['id_produto'] }}"><input type="hidden" name="id"
                             value="{{ row['id_produto'] }}">
-                        <button style="background-color: #ffffff; border: none;" type="submit" name="formEditProduto"></button>
-                            <i class="fas fa-edit"></i></button>
+                        <button style="background-color: #ffffff; border: none;" type="submit"
+                            name="formEditProduto"> <i class="fas fa-edit"></i></button>
                     </form>
                 </td>
                 <td>
