--- a/mod_index/templates/formIndex.html
+++ b/mod_index/templates/formIndex.html
@@ -2,6 +2,14 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 
+{% if 'login' in session %}
+
+    Bem-vindo <b>{{ session['login'] }}</b>
+
+{% endif %}
+
 <label text-align:center class="form-label__title">Home</label>
 <p class="important">Seja bem vindo!</p>
+
+
 {% endblock %}
