--- a/mod_login/templates/formLogin.html
+++ b/mod_login/templates/formLogin.html
@@ -3,14 +3,33 @@
 {% block menu %}
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
-        <h2>Abc Bolinhas</h2>
+        <h2>Pastelaria</h2>
     </a>
 </nav>
 {% endblock %}
 {% block content %}
 <form action="{{ url_for('login.validaLogin') }}" method="post">
-    <input placeholder="CPF" name="usuario" type="text" value="abc"><input placeholder="Senha" name="senha"
-        type="password" value="Bolinhas"><br>
-    <input type="submit" value="Login">
+    <label class="form-label__title">Login Pastelaria</label><br>
+    <label class="form-label__description">Preencha os dados para entrar</label>
+    <div class="row g-1 row--login row--border">
+        <div class="row">
+            <div class="col-12">
+                <label for="cpf" class="form-label">CPF</label>
+                <input class="form-control" id="cpf" placeholder="CPF" name="usuario" type="text" value="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <label for="senha" class="form-label">Senha</label>
+                <input class="form-control" placeholder="Senha" name="senha" type="password" value="">
+            </div>
+        </div>
+        <div class="row row--buttons ">
+            <div class="col-12">
+                <button class="btn btn-primary float-end login__button" type='submit'><i class=' fas fa-door-open'></i> Entrar</button>
+            </div>
+        </div>
+    </div>
+
 </form>
 {% endblock %}
