--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,7 @@
     <script src="{{ url_for('static', filename='jquery/jquery-3.6.1.js') }}"></script>
     <script src="{{ url_for('static', filename='jquery/jquery.mask.min.js') }}"></script>
     <script src="{{ url_for('static', filename='masks.js') }}"></script>
+    <script src="{{ url_for('static', filename='utils.js') }}"></script>
     {% block jslist %}
 
     {% endblock %}
